[package]
name = "uAttestation"
version = "0.1.0"
authors = ["meduo <meduo@foxmail.com>"]
edition = "2018"

[dependencies]
#通用依赖
futures = "0.3"
tokio = { version = "1.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
openssl = { version = "0.10" }
bcrypt = "0.9.0"

#配置数据相关依赖
config = "0.10.1"
glob = "0.3.0"

#延迟加载
lazy_static="1.4.0"

#WEB服务依赖
actix = { version="0.10"}
actix-rt = { version="2.1"}
actix-service = "1.0.6"
actix-web = { version = "3", features = ["openssl"] }
actix-cors = "0.5"
uuid = "0.8"

#Casbin认证
casbin = { version = "2.0.6", default-features = false, features = ["runtime-async-std", "logging", "incremental"] }
actix-casbin= {version = "0.4.2", default-features = false, features = [ "runtime-async-std" ]}
actix-casbin-auth = {version = "0.4.4", default-features = false, features = [ "runtime-async-std" ]}
jsonwebtoken = {version = "7.2.0"}

#ETCD数据库依赖
etcd-rs = "0.5"

#日志相关依赖
log = "0.4"
fast_log="1.3"
bigdecimal = "0.2"
env_logger = "0.8"

#数据库相关依赖
rbatis =  { version = "1.8" , features = ["snowflake"]  }

#CSV
walkdir = { verison = "2.3.1" }
csv = { vserion = "1.1.3"}

[dev-dependencies]
tokio-test = { version = "0.4" }


